# pyahk

./: .env  .gitignore  .qoderignore  CLAUDE.md  GEMINI.md  OPERATIONS.md  PaddleOCR.yaml  README.md  ahk_commands.ahk  benchmark_ocr_performance.py  d4.json  d4_druid.json  d9_magicV2.ahk  debug_circle_detection.py  default.json  gemini_help.md  hold_client.py  hold_server.ahk  hold_server_extended.ahk  holdkey.bat  httptest.rest  last.json  main.py  main_special.py  notepadtest.json  package-lock.json  poe2_锐眼.json  requirements.txt  test_color_ui_integration.py  test_simplified_color_config.py  testocr.py  tors10.json
.qoder/rules/: runtime.md
deepai/: .gitignore  README.md  __init__.py  config.py  recognizer.py  requirements_cpu.txt  requirements_inference.txt  test_tflite.py
deepai/models/: digit_cnn.keras  label_map.json
deepai/scripts/: 00_iterative_labeling.py  01_prepare_data.py  01a_generate_digits.py  01b_auto_label.py  02_verify_labels.py  03_train_model.py  04_evaluate_model.py  05_convert_to_tflite.py  06_generate_digit_templates.py
docs/: AHK_BRANCH_README.md  AHK_COMPLETE_ARCHITECTURE.md  AHK_IMPLEMENTATION_PLAN.md  AHK_SIMPLE_PLAN.md
native_capture/: CMakeLists.txt  build.bat  capture_lib.cpp  capture_lib.h  hello.cpp  python_wrapper.py
performance_test/: README.md  benchmark_results.json  perf_full_benchmark.py
torchlight_assistant/: __init__.py
torchlight_assistant/config/: ahk_commands.py  ahk_config.py
torchlight_assistant/core/: __init__.py  ahk_command_sender.py  ahk_event_receiver.py  ahk_input_handler.py  config_manager.py  debug_display_manager.py  event_bus.py  input_handler.py  macro_engine.py  pathfinding_manager.py  resource_manager.py  signal_bridge.py  simple_affix_reroll_manager.py  skill_manager.py  states.py  unified_scheduler.py
torchlight_assistant/gui/: __init__.py  basic_widgets.py  color_analysis_tools.py  color_picker_dialog.py  config_widgets.py  custom_widgets.py  debug_osd_window.py  feature_widgets.py  main_window.py  priority_keys_widget.py  region_selection_dialog.py  resource_config_manager.py  resource_widgets.py  skill_config_widget.py  styles.py  (+2 more)
wiki/: 01-项目概述.md  01-项目概述与快速入门.md  02-技能系统.md  02-架构与核心概念.md  02-核心架构设计.md  03-功能模块与API.md  03-功能模块详解.md  03-智能药剂.md  04-装备洗练.md  04-配置与条件系统.md  05-图像捕获与性能.md  05-自动寻路.md  06-架构设计.md  06-调试、部署与故障排查.md  06-调试与开发.md  07-部署与运维.md  07-配置指南.md  08-开发指南.md  08-故障排查手册.md  09-API参考与扩展.md  09-调试模式.md  10-输入系统.md  11-图像与性能.md  12-条件系统.md  13-FAQ.md  优先级按键暂停恢复架构.md  选择性事件拦截架构更新说明.md
(+15 files in other folders)
